--- a/Random4/Base.lproj/Main.storyboard
+++ b/Random4/Base.lproj/Main.storyboard
@@ -30,6 +30,9 @@
                                     <color key="titleColor" red="0.99082623110000001" green="0.99082623110000001" blue="0.99082623110000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="button1" destination="vXZ-lx-hvc" eventType="touchUpInside" id="CmQ-bx-Eg0"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J0S-JV-Fup">
                                 <rect key="frame" x="243" y="356" width="70" height="70"/>
@@ -39,6 +42,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="button2" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Wbu-Ld-3Pe"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ETg-Tg-ltW">
                                 <rect key="frame" x="243" y="474" width="70" height="70"/>
@@ -48,6 +54,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="button4" destination="vXZ-lx-hvc" eventType="touchUpInside" id="oHA-L1-cPP"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zJn-Wa-cjP">
                                 <rect key="frame" x="82" y="474" width="70" height="70"/>
@@ -57,13 +66,16 @@
                                     <color key="titleColor" red="0.99082623110000001" green="0.99082623110000001" blue="0.99082623110000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="button3" destination="vXZ-lx-hvc" eventType="touchUpInside" id="hf5-4i-8PI"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="label" destination="9mz-Zp-EjD" id="0Zz-s7-dfj"/>
+                        <outlet property="label" destination="9mz-Zp-EjD" id="si2-0f-nW7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
